# exo

./: .last-branch  AGENTS.md  CLAUDE.md  README.md  agent-core-vs-orbiter-analysis.md  audit.md  mkdocs.yml  prd.json  progress.txt  pyproject.toml  scratchpad.txt
.claude/: settings.json
.github/workflows/: ci.yml
.ralph/: progress.md
.ralph/runs/: run-20260308-234806-741576-iter-1.md  run-20260308-234806-741576-iter-2.md  run-20260308-234806-741576-iter-3.md  run-20260308-234806-741576-iter-4.md
archive/2026-02-16-exo-framework/: prd.json  progress.txt
archive/2026-02-16-exo-observability/: prd.json  progress.txt
docs/: design-spec.md  rewrite-plan.md
docs/architecture/: agent-runtime-control-contracts.md  context-management-infinite-context-stages.md  index.md  temporal-parity-gaps.md
docs/design/: context-enhancement-design.md  deep-agent-tools-design.md  deepagent-port-plan.md  guardrail-design.md  memory-enhancement-design.md  memory-evolution-design.md  operator-optimization-design.md  rails-design.md  retrieval-design.md  super-react-agent-port.md  task-controller-design.md  workflow-extensions-design.md
docs/guides/: agents.md  human-in-the-loop.md  sandbox.md
docs/guides/context/: token-tracking.md
docs/porting-guide/: context-engine.md  context-evolver.md  deep-agent-toolkit.md  guardrails.md  index.md  memory-system.md  operator-optimization.md  rag-retrieval.md  rails.md  task-management.md  workflow-engine.md
docs/reference/core/: config.md  human.md
docs/reference/sandbox/: e2b.md  index.md  tools.md
examples/advanced/: skill_agent.py  web_deploy.py
examples/advanced/deepagent/: .env.example  README.md  evaluation_results_20260311_121123.txt  evaluation_results_20260311_121248.json  evaluation_results_20260311_121248.txt  evaluation_results_20260311_121510.json  evaluation_results_20260311_121510.txt  pyproject.toml
examples/advanced/deepagent/agent/: context_manager.py  plan_tracker.py  prompt_templates.py  qa_handler.py  super_config.py  super_factory.py  super_react_agent.py  tool_call_handler.py  utils.py
examples/advanced/deepagent/llm/: __init__.py  openrouter_function_call_example.py  openrouter_llm.py
examples/advanced/deepagent/test/: super_react_agent_test_run.py
examples/advanced/deepsearch/: __init__.py  __main__.py  agents.py  config.py  context_manager.py  engine.py  llm_utils.py  memory.py  prompts.py  reporter.py  schemas.py  server.py  types.py
examples/advanced/perplexica/: __init__.py  __main__.py  conversation.py  pipeline.py
examples/benchmarks/bfcl/: run.py
examples/benchmarks/gaia/: run.py
examples/benchmarks/imo/: run.py
examples/benchmarks/osworld/: run.py
examples/benchmarks/visualwebarena/: run.py
examples/benchmarks/xbench/: run.py
examples/common/tools/: __init__.py  browser.py  document.py  search.py
examples/distributed/: docker-compose.yml  fastapi_sse.py  mcp_sse_workers.py  multi_agent.py  simple_chat.py
examples/multi_agent/: custom_agent.py  debate.py  deepresearch.py  master_worker.py  search_patterns.py  travel.py
examples/quickstart/: agents.yaml  cli_usage.py  config_driven.py  define_agent.py  handoff.py  hitl.py  hybrid_swarm.py  local_tool.py  mcp_tool.py  multi_root_agent.py  parallel_task.py  serving.py  use_llm.py  use_memory.py  use_trace.py  workflow.py
site/: 404.html  index.html  sitemap.xml
site/architecture/: index.html
site/architecture/agent-runtime-control-contracts/: index.html
site/architecture/async-patterns/: index.html
site/architecture/context-management-infinite-context-stages/: index.html
site/architecture/decisions/: index.html
site/architecture/dependency-graph/: index.html
site/architecture/design-decisions/: index.html
site/architecture/error-handling/: index.html
site/architecture/execution-flow/: index.html
site/architecture/overview/: index.html
site/architecture/temporal-parity-gaps/: index.html
site/changelog/: index.html
site/contributing/: index.html
site/contributing/api-conventions/: index.html
site/contributing/code-style/: index.html
site/contributing/development/: index.html
site/contributing/package-structure/: index.html
site/contributing/testing/: index.html
site/design-spec/: index.html
site/distributed/architecture/: index.html
site/distributed/migration/: index.html
site/distributed/workers/: index.html
site/frontend-design/: index.html
site/getting-started/: index.html
site/getting-started/concepts/: index.html
site/getting-started/first-agent/: index.html
site/getting-started/installation/: index.html
site/getting-started/quickstart/: index.html
site/guides/: index.html
site/guides/a2a/: index.html
site/migration/: index.html
site/migration-guide/: index.html
site/reference/: index.html
site/rewrite-plan/: index.html
site/search/: search_index.json
skills/agent-skills/: SKILL.md
skills/context/: SKILL.md
skills/guardrails/: SKILL.md
skills/harness/: SKILL.md
skills/hooks/: SKILL.md
skills/mcp-cli/: SKILL.md
skills/memory/: SKILL.md
skills/models/: SKILL.md
skills/planner/: SKILL.md
skills/ptc/: SKILL.md
skills/ralph/: SKILL.md
skills/spawn/: SKILL.md
skills/streaming/: SKILL.md
skills/swarms/: SKILL.md
skills/testing/: SKILL.md
skills/tools/: SKILL.md
tasks/: prd-agent-core-feature-port.md  prd-agents-roadmap.json
tests/integration/: conftest.py  test_a2a_protocol.py  test_agent_context.py  test_agent_memory.py  test_agent_streaming.py  test_agent_structured_output.py  test_agent_tools.py  test_branching_isolation.py  test_context_summarization.py  test_context_vector_injection.py  test_distributed_worker.py  test_dynamic_loading.py  test_eval_framework.py  test_handoff_memory.py  test_handoffs.py  test_learning_agent.py  test_mcp_large_output.py  test_mcp_progress_stream.py  test_mcp_stdio.py  test_memory_context_chain.py  test_memory_persistence.py  test_memory_vector.py  test_research_marathon.py  test_self_spawn.py  test_spawn_memory_isolation.py  test_structured_with_tools.py  test_team_marathon.py
(+179 files in other folders)
