[project]
name = "orbiter-workspace"
version = "0.1.0"
description = "Orbiter: A modern multi-agent framework"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "packages/orbiter-core",
    "packages/orbiter-models",
    "packages/orbiter-context",
    "packages/orbiter-memory",
    "packages/orbiter-mcp",
    "packages/orbiter-sandbox",
    "packages/orbiter-observability",
    "packages/orbiter-distributed",
    "packages/orbiter-eval",
    "packages/orbiter-a2a",
    "packages/orbiter-cli",
    "packages/orbiter-server",
    "packages/orbiter-train",
    "packages/orbiter-web",
    "packages/orbiter-guardrail",
    "packages/orbiter-retrieval",
    "packages/orbiter-perplexica",
    "packages/orbiter",
]

[dependency-groups]
dev = [
    "orbiter-core",
    "orbiter-models",
    "orbiter-context",
    "orbiter-memory",
    "orbiter-mcp",
    "orbiter-sandbox",
    "orbiter-observability",
    "orbiter-distributed",
    "orbiter-eval",
    "orbiter-a2a",
    "orbiter-cli",
    "orbiter-server",
    "orbiter-train",
    "orbiter-web",
    "orbiter-guardrail",
    "orbiter-retrieval",
    "orbiter-perplexica",
    "orbiter-ai",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "fakeredis[lua]",
    "temporalio>=1.7",
    "ruff>=0.8",
    "pyright>=1.1",
    "tenacity>=8.0",
    "docker>=7.0",
    "httpx>=0.27",
    "chromadb>=0.6",
    "sentence-transformers>=3.0",
]

[tool.uv.sources]
orbiter-core = { workspace = true }
orbiter-models = { workspace = true }
orbiter-context = { workspace = true }
orbiter-memory = { workspace = true }
orbiter-mcp = { workspace = true }
orbiter-sandbox = { workspace = true }
orbiter-observability = { workspace = true }
orbiter-distributed = { workspace = true }
orbiter-eval = { workspace = true }
orbiter-a2a = { workspace = true }
orbiter-cli = { workspace = true }
orbiter-server = { workspace = true }
orbiter-train = { workspace = true }
orbiter-web = { workspace = true }
orbiter-guardrail = { workspace = true }
orbiter-retrieval = { workspace = true }
orbiter-perplexica = { workspace = true }
orbiter-ai = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["orbiter", "orbiter_cli", "orbiter_server", "orbiter_web"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["packages/*/tests", "tests/integration"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
markers = [
    "integration: marks tests as integration tests requiring real external deps",
    "marathon: marks tests as long-running marathon integration tests",
]

