[project]
name = "exo-workspace"
version = "0.1.0"
description = "Exo: A modern multi-agent framework"
requires-python = ">=3.11"
dependencies = [
    "graphifyy>=0.4.2",
]

[tool.uv.workspace]
members = [
    "packages/exo-core",
    "packages/exo-models",
    "packages/exo-context",
    "packages/exo-memory",
    "packages/exo-mcp",
    "packages/exo-sandbox",
    "packages/exo-observability",
    "packages/exo-distributed",
    "packages/exo-eval",
    "packages/exo-a2a",
    "packages/exo-cli",
    "packages/exo-server",
    "packages/exo-train",
    "packages/exo-web",
    "packages/exo-harness",
    "packages/exo-guardrail",
    "packages/exo-retrieval",
    "packages/exo-search",
    "packages/exo-skills",
    "packages/exo-mcp-cli",
    "packages/exo",
]

[dependency-groups]
dev = [
    "exo-core",
    "exo-models",
    "exo-context",
    "exo-memory",
    "exo-mcp",
    "exo-sandbox",
    "exo-observability",
    "exo-distributed",
    "exo-eval",
    "exo-a2a",
    "exo-cli",
    "exo-server",
    "exo-train",
    "exo-web",
    "exo-harness",
    "exo-guardrail",
    "exo-retrieval",
    "exo-search",
    "exo-skills",
    "exo-mcp-cli",
    "exo-ai",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "fakeredis[lua]",
    "temporalio>=1.7",
    "ruff>=0.8",
    "pyright>=1.1",
    "tenacity>=8.0",
    "docker>=7.0",
    "httpx>=0.27",
    "chromadb>=0.6",
    "sentence-transformers>=3.0",
    "tiktoken>=0.5",
]

[tool.uv.sources]
exo-core = { workspace = true }
exo-models = { workspace = true }
exo-context = { workspace = true }
exo-memory = { workspace = true }
exo-mcp = { workspace = true }
exo-sandbox = { workspace = true }
exo-observability = { workspace = true }
exo-distributed = { workspace = true }
exo-eval = { workspace = true }
exo-a2a = { workspace = true }
exo-cli = { workspace = true }
exo-server = { workspace = true }
exo-train = { workspace = true }
exo-web = { workspace = true }
exo-harness = { workspace = true }
exo-guardrail = { workspace = true }
exo-retrieval = { workspace = true }
exo-search = { workspace = true }
exo-skills = { workspace = true }
exo-mcp-cli = { workspace = true }
exo-ai = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["exo", "exo_cli", "exo_mcp_cli", "exo_server", "exo_skills", "exo_web"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["packages/*/tests", "tests/integration"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
markers = [
    "integration: marks tests as integration tests requiring real external deps",
    "marathon: marks tests as long-running marathon integration tests",
]

